force-app/main/default/objects/Call_Insight__c/Call_Insight__c.object-meta.xml
<CustomObject>
    <label>Call Insight</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Call Insights Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>