force-app/main/default/objects/Call_Insight__c/fields/AI_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Score__c</fullName>
    <label>AI Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>