force-app/main/default/objects/Call_Insight__c/fields/Bulleted_Summary__c.field-meta.xml
<CustomField>
    <fullName>Bulleted_Summary__c</fullName>
    <label>Bulleted Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>