force-app/main/default/objects/Call_Insight__c/fields/Force_Reassign__c.field-meta.xml
<CustomField>
    <fullName>Force_Reassign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Reassign</label>
    <type>Checkbox</type>
</CustomField>