force-app/main/default/objects/Call_Insight__c/fields/HighLights__c.field-meta.xml
<CustomField>
    <fullName>HighLights__c</fullName>
    <label>HighLights</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>