force-app/main/default/objects/Call_Insight__c/fields/Recording_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Recording_Start_DateTime__c</fullName>
    <label>Recording Start DateTime</label>
    <type>DateTime</type>
</CustomField>