force-app/main/default/objects/Call_Insight__c/fields/Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>