force-app/main/default/objects/Call_Insight__c/fields/Salesforce_User_Extension_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User_Extension_Id__c</fullName>
    <label>Salesforce User Extension Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>