force-app/main/default/objects/Call_Insight__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Call Insights</relationshipLabel>
    <relationshipName>Call_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>