force-app/main/default/objects/Call_Insight__c/fields/Transcript__c.field-meta.xml
<CustomField>
    <fullName>Transcript__c</fullName>
    <label>Transcript</label>
    <length>90000</length>
    <type>Html</type>
</CustomField>